--- a/trial_website/templates/base.html
+++ b/trial_website/templates/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<div id="app-container" class="d-flex-col-center">
+<div id="container" class="d-flex-col-center">
     {% block content %}
     {% endblock %}
 </div>
